fix(base): local state can not be gotten from process.env.IS_LOCAL

--- a/package.json
+++ b/package.json
@@ -91,6 +91,9 @@
     "transform": {
       "^.+\\.ts?$": "ts-jest"
     },
+    "moduleNameMapper": {
+      "(.+)\\.js": "$1"
+    },
     "collectCoverageFrom": [
       "**/*.ts"
     ],
