chore(base): prevent directory hierarchy mess for local import statements

--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
       "^.+\\.ts?$": "ts-jest"
     },
     "moduleNameMapper": {
-      "(.+)\\.js": "$1"
+      "#/(.*)": "<rootDir>/$1"
     },
     "collectCoverageFrom": [
       "**/*.ts"
