--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,9 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": false,
+    "paths": {
+      "#/*": ["./*"]
+    },
     "moduleResolution": "node",
     "types": ["node", "jest"]
   },
