--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   "author": "Faruq Alli-Balogun <ab.faruq@sten.agency>",
   "license": "Unlicense",
   "devDependencies": {
-    "@types/aws-lambda": "^8.10.133",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.17",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
@@ -29,9 +28,7 @@
     "ts-jest": "^29.1.2",
     "typescript": "^5.3.3"
   },
-  "dependencies": {
-    "aws-lambda": "^1.0.7"
-  },
+  "dependencies": {},
   "eslintConfig": {
     "env": {
       "es2021": true
