--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "outrage-service",
   "description": "Repository for all Outrage services",
   "version": "0.0.0",
-  "type": "module",
   "private": true,
   "scripts": {
     "lint": "eslint . --ext .ts --ignore-path .gitignore",
@@ -19,6 +18,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.17",
+    "@types/pg": "^8.11.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.56.0",
@@ -28,7 +28,9 @@
     "ts-jest": "^29.1.2",
     "typescript": "^5.3.3"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@faruuko/outrage-orm": "latest"
+  },
   "eslintConfig": {
     "env": {
       "es2021": true
