--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,8 +12,8 @@
     "paths": {
       "#/*": ["./*"]
     },
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "types": ["node", "jest"]
   },
-  "exclude": ["services"]
+  "include": ["services", "**/*.ts"]
 }
