--- a/seed.yml
+++ b/seed.yml
@@ -1,8 +1,8 @@
 before_compile:
   - echo @faruuko:registry=https://npm.pkg.github.com >> ~/.npmrc
   - echo //npm.pkg.github.com/:_authToken=$GITHUB_PACKAGE_ACCESS_TOKEN >> ~/.npmrc
-  - git clone https://$GITHUB_CLONING_ACCESS_TOKEN@github.com/faruuko/outrage-service.git
-  - cd outrage-service
+  - git clone https://$GITHUB_CLONING_ACCESS_TOKEN@github.com/faruuko/outrage-orm.git
+  - cd outrage-orm
   - npm install
   - npm install -g ts-node
   - npx migrate --connectionString=$DATABASE_CONNECTION_URL
