--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,7 +30,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pnpm-store-
       - name: Authenticate
-        run: echo "@faruuko:registry = https://npm.pkg.github.com/ //npm.pkg.github.com/:_authToken=${{ secrets.PACKAGE_OPERATIONS_ACCESS_TOKEN }}" > ~/.npmrc
+        run: echo "@faruuko:registry = https://npm.pkg.github.com/ //npm.pkg.github.com/:_authToken=${{ secrets.PACKAGE_OPERATIONS_ACCESS_TOKEN }} //npm.pkg.github.com:443/:_authToken=${{ secrets.PACKAGE_OPERATIONS_ACCESS_TOKEN }}" > ~/.npmrc
       - name: Install dependencies
         run: pnpm install
       - name: Test
