--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,7 +30,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pnpm-store-
       - name: Authenticate
-        run: echo "@faruuko:registry = https://npm.pkg.github.com/ //npm.pkg.github.com:_authToken=${{ secrets.PACKAGE_OPERATIONS_ACCESS_TOKEN }}" > ~/.npmrc
+        run: echo "@faruuko:registry=https://npm.pkg.github.com //npm.pkg.github.com/:_authToken=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" > ~/.npmrc
       - name: Install dependencies
         run: npm install
       - name: Test
