--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,8 +30,8 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pnpm-store-
       - name: Authenticate
-        run: echo "@faruuko:registry=https://npm.pkg.github.com/ //npm.pkg.github.com/:_authToken=${{ secrets.PACKAGE_OPERATIONS_ACCESS_TOKEN }}" > ./.npmrc
+        run: echo "@faruuko:registry=https://npm.pkg.github.com/ @faruuko:always-auth=true //npm.pkg.github.com/:_authToken=${{ secrets.PACKAGE_OPERATIONS_ACCESS_TOKEN }}" > ./.npmrc
       - name: Install dependencies
-        run: pnpm install
+        run: npm install
       - name: Test
         run: pnpm test -- --coverage=true --coverageReporters=text
