--- a/seed.yml
+++ b/seed.yml
@@ -2,3 +2,14 @@ before_compile:
   - echo @faruuko:registry=https://npm.pkg.github.com >> ~/.npmrc
   - echo //npm.pkg.github.com/:_authToken=$GITHUB_PACKAGE_ACCESS_TOKEN >> ~/.npmrc
   - ls -a -s
+  - which .npmrc
+
+  - pwd
+  - git clone https://$GITHUB_CLONING_ACCESS_TOKEN@github.com/faruuko/outrage-orm.git
+  - ls
+  - cd outrage-orm
+  - pwd
+  - ls
+  - npm install
+  - npm install -g ts-node
+  - npx migrate --connectionString=$DATABASE_CONNECTION_URL
