--- a/seed.yml
+++ b/seed.yml
@@ -6,7 +6,7 @@ before_compile:
   - pwd
   - git clone https://$GITHUB_CLONING_ACCESS_TOKEN@github.com/faruuko/outrage-orm.git
   - ls
-  - cd ./outrage-orm
+  - cd outrage-orm && pwd
   - pwd
   - ls
   - pnpm install
