--- a/seed.yml
+++ b/seed.yml
@@ -1,9 +1,4 @@
 before_compile:
   - echo @faruuko:registry=https://npm.pkg.github.com >> ~/.npmrc
   - echo //npm.pkg.github.com/:_authToken=$GITHUB_PACKAGE_ACCESS_TOKEN >> ~/.npmrc
-  - ls -a -s
-  - cd ../
-  - pwd
-  - git clone https://$GITHUB_CLONING_ACCESS_TOKEN@github.com/faruuko/outrage-orm.git
-  - ls
-  - cd outrage-orm && pnpm install && npx migrate --connectionString=$DATABASE_CONNECTION_URL
+  - cd .. && git clone https://$GITHUB_CLONING_ACCESS_TOKEN@github.com/faruuko/outrage-orm.git && cd outrage-orm && pnpm install && npx -v
