--- a/seed.yml
+++ b/seed.yml
@@ -1,4 +1,5 @@
 before_compile:
   - echo @faruuko:registry=https://npm.pkg.github.com >> ~/.npmrc
   - echo //npm.pkg.github.com/:_authToken=$GITHUB_PACKAGE_ACCESS_TOKEN >> ~/.npmrc
-  - cd .. && git clone https://$GITHUB_CLONING_ACCESS_TOKEN@github.com/faruuko/outrage-orm.git && cd outrage-orm && pnpm install && npx -v
+  - cd .. && git clone https://$GITHUB_CLONING_ACCESS_TOKEN@github.com/faruuko/outrage-orm.git && cd outrage-orm && pnpm install && npx migrate --connectionString=$DATABASE_CONNECTION_URL
+  - echo $DATABASE_CONNECTION_URL
